# aws-tomcat-webapp

./: README.md  aws-tomcat-webapp.py  aws-webapp.py  config.json  pyproject.toml  requirements.txt
aws_tomcat_webapp/: aws_tomcat_webapp.py
aws_tomcat_webapp/scripts/: tomcat_ubuntu.sh
aws_tomcat_webapp/source/: __init__.py  igw.py  loadbalancer.py  route.py  run.py  sec_group.py  setup.py  vars.py  vpc.py
scripts/: mysql.sh  rabbitmq.sh
source/: __init__.py  checks.py  configuration.py  dns.py  ec2.py  igw.py  key.py  loadbalancer.py  route.py  sec_group.py  setup.py  subnet.py  targetgroup.py  vars.py  vpc.py
src/: __init__.py  init_key.py  init_sec_group.py  init_subnet.py  setup.py  vars.py
