[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-tomcat-webapp"
version = "1.0.1"
description = "A Python-based IaC AWS automation tool"
requires-python = ">=3.9"

dependencies = [
    "boto3>=1.43.18"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
aws-tomcat-webapp = "aws_tomcat_webapp.aws_tomcat_webapp:main"